refactor(OrderTable): OrderTable 리팩토링